# ducklake-serverless

./: .gitleaks.toml  AGENTS.md  Makefile  README.md  _typos.toml  flake.nix  pyproject.toml  renovate.json
.github/workflows/: ci.yml  compatibility.yml  gitleaks.yml
docs/: DESIGN.md  ROADMAP.md  compatibility.md
docs/benchmarks/: httpfs-read-path.md
scripts/: compat_probe.py  compat_report.py  rename.py  soak_crash_drill.py
src/ducklake_serverless/: __init__.py  blob.py  chunk.py  commit.py  config.py  engine.py  errors.py  fsspec_fs.py  gc.py  generation.py  lease.py  log.py  models.py  objectstore.py  payload.py  rebase.py  recorder.py  root.py  session.py
tests/: conftest.py  test_blob.py  test_chunk.py  test_config.py  test_engine_boundary.py  test_fault_injection.py  test_fsspec_fs.py  test_gc.py  test_integration_minio.py  test_lease.py  test_live_e2.py  test_log.py  test_maintain_data.py  test_models.py  test_no_placeholder.py  test_objectstore_moto.py  test_pack_gc.py  test_rebase.py  test_recorder.py  test_root_protocol.py  test_session_e2e.py  test_torture.py  test_transport.py
