[project]
name = "ducklake_serverless"
version = "0.1.0"
description = "Serverless multi-writer DuckLake: catalog-as-versioned-object with S3 conditional-write commits."
readme = "README.md"
license = { file = "LICENSE" }
# 3.12 floor for broad host portability — every downstream adopter lowered the 3.13
# default. Raise per deploy target; flake.nix's interpreter follows this line.
requires-python = ">=3.12"
authors = [{ name = "ak2k" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.7",
    "structlog>=24",
    "boto3>=1.36",
    "duckdb>=1.3",
    "pytz>=2024.1",  # duckdb requires it to fetch TIMESTAMPTZ result columns (maintenance CALLs)
    "sqlglot>=25",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "moto[s3]>=5.1.5",
    "boto3-stubs[s3]>=1.35",
    "mypy-boto3-s3>=1.43.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ducklake_serverless"]

# --- ruff: lint + format ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade — keeps agents from regressing to old idioms
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async correctness — high signal
    "PTH",           # pathlib over os.path
    "TC",            # TYPE_CHECKING import discipline
    "RET",           # return-statement hygiene
    "PIE",           # flake8-pie: misc anti-patterns (unnecessary list/dict/set comprehensions, etc.)
    "PL",            # pylint subset
    "ANN",           # require annotations — agents drop them otherwise
    "S",             # bandit (security)
    "TRY",           # try/except hygiene
    "BLE",           # no bare except
    "N",             # naming
    "D",             # docstrings (relaxed in tests via per-file-ignores)
]
ignore = [
    "D100", "D104", "D107",  # don't require module/package/__init__ docstrings
    "ANN401",                # tactically allow Any — basedpyright reports it separately
    "TRY003",                # exception message length — too prescriptive
    "PLR0913",               # many arguments — verb signatures are wide
    "D203",                  # conflicts with D211
    "D213",                  # conflicts with D212
    "COM812",                # conflicts with ruff format (trailing-comma rules)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "PLR2004"]  # asserts + docs + magic numbers ok in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
# `TC` (selected above) pushes type-only imports under `if TYPE_CHECKING`. Pydantic
# resolves model field annotations at runtime, so its base classes must stay
# runtime-visible or every BaseModel / BaseSettings subclass breaks. Ships in the
# baseline because Pydantic is the baseline boundary validator.
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.format]
docstring-code-format = true

# --- basedpyright: types ---
[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportImplicitOverride = "error"
reportUnusedCallResult = "none"
reportAny = "warning"  # flags Any-typed expressions; basedpyright-only

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -m 'not live and not integration' --cov=src --cov-report=term-missing:skip-covered"
xfail_strict = true
filterwarnings = [
    "error",  # deprecations become test failures — catch early
    "ignore::hypothesis.errors.NonInteractiveExampleWarning",
]
markers = [
    # Pre-declare custom markers here; `--strict-markers` rejects undeclared ones.
    "slow: concurrency torture tests (seconds, not milliseconds)",
    "live: opt-in tests against a real S3-compatible endpoint (DUCKLAKE_LIVE_*)",
    "integration: opt-in tests against MinIO or another S3 API (DUCKLAKE_IT_*)",
    # "integration: requires external services",
    # "live: hits the real network/browser",
    #  ^ uncomment to declare it, then append `-m 'not live and not integration'` to addopts above so the
    #    inner loop stays hermetic (CI opts in by dropping that filter).
]

# --- coverage ---
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80  # see AGENTS.md "Appropriate divergence" — lower for CLIs
